--- a/templates/enviar.html
+++ b/templates/enviar.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/CSS/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Envio de Formulário - Carlos Nicacio</title>
 </head>
 
 <body>
-
     <section id="enviado">
         <div id="envio">
             <i class="fa fa-check-square" aria-hidden="true"></i>
@@ -21,7 +20,6 @@
             <a href="/">Voltar para o portfólio</a>
         </div>
     </section>
-
 </body>
 
 </html>
